[package]
name = "rustnao"
version = "0.4.0"
authors = ["Clement Tsang <clementjhtsang@gmail.com>", "Tracreed <davidalasow@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Tracreed/RustNAO"
license = "MIT"
description = "A modernized Rust implementation of a wrapper for the SauceNAO API."
categories = ["api-bindings"]
keywords = ["saucenao", "saucenao-api", "wrapper"]
documentation = "https://docs.rs/rustnao/"
exclude = [".github", "rustfmt.toml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde_json = "1.0"
url = "2.5"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
dotenv = "0.15.0"
